--- a/caption-frontend/index.html
+++ b/caption-frontend/index.html
@@ -1,35 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>AI Caption Generator</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 30px; }
-    #caption { margin-top: 20px; font-size: 18px; font-weight: bold; }
-  </style>
+  <meta charset="UTF-8">
+  <title>Caption Quest</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🖼 AI Caption Generator</h1>
+  <h1>Caption Quest</h1>
 
-  <p>Paste an image URL:</p>
-  <input type="text" id="imageUrl" size="60" placeholder="https://example.com/mycat.jpg">
+  <input type="file" id="imageUpload" accept="image/*">
   <button onclick="getCaption()">Get Caption</button>
 
-  <div id="caption"></div>
+  <p id="result"></p>
 
-  <script>
-    async function getCaption() {
-      const url = document.getElementById("imageUrl").value;
-
-      const response = await fetch("ai-func-quest-fnfkevgqg5cphuhr.southeastasia-01.azurewebsites.net", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ imageUrl: url })
-      });
-
-      const data = await response.json();
-      document.getElementById("caption").innerText =
-        data.caption ? `Caption: ${data.caption}` : "No caption found 😢";
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
