--- a/caption-frontend/index.html
+++ b/caption-frontend/index.html
@@ -22,7 +22,7 @@
   <div id="raw"></div>
 
 <script>
-const FUNC_URL = 'https://<your-func>.azurewebsites.net/api/caption'; // replace
+const FUNC_URL = 'ai-func-quest-fnfkevgqg5cphuhr.southeastasia-01.azurewebsites.net'; // replace
 
 const fileInput = document.getElementById('file');
 const preview = document.getElementById('preview');
@@ -63,3 +63,4 @@ btn.addEventListener('click', async () => {
 </script>
 </body>
 </html>
+
