--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div id="raw"></div>
 
 <script>
-const FUNC_URL = 'ai-func-quest-fnfkevgqg5cphuhr.southeastasia-01.azurewebsites.net'; // replace
+const FUNC_URL = '/api/caption'; // replace
 
 const fileInput = document.getElementById('file');
 const preview = document.getElementById('preview');
