--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   <div id="raw"></div>
 
 <script>
-const FUNC_URL = '/api/caption'; // replace
-
+<script>
+const FUNC_URL = '/api/HttpTrigger1'; // 🔑 This is important
+  
 const fileInput = document.getElementById('file');
 const preview = document.getElementById('preview');
 const btn = document.getElementById('btn');
